Print: timeline container avoid page break inside

--- a/designsystem-dev/print.css
+++ b/designsystem-dev/print.css
@@ -484,6 +484,7 @@ html {
 
   /* timeline */
   .timeline-container {
+    page-break-inside: avoid;
     margin-top: calc(25px - 2.5rem);
   }
   .timeline-container .timeline-row {
